# BrowserTeacher

./: .gitignore  Makefile  README.md
backend/: Dockerfile  main.py  pyproject.toml
backend/api/: app.py
backend/api/core/: config.py
backend/api/v1/routes/: voice.py
backend/voice_bot/: Dockerfile  pydantic_llm_adapter.py  worker.py
backend/voice_bot/schemas/: __init__.py  lesson.py  narration.py  room.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/convex/: lesson.ts  messages.ts  schema.ts  sessions.ts
frontend/convex/_generated/: api.d.ts
frontend/src/app/: ConvexClientProvider.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/api/: _store.ts
frontend/src/app/api/lesson/plan/: route.ts
frontend/src/app/api/lesson/step/: route.ts
frontend/src/app/api/messages/: route.ts
frontend/src/app/api/messages/append_json/: route.ts
frontend/src/app/api/messages/history_json/: route.ts
frontend/src/app/api/session/: route.ts
frontend/src/app/api/session/start/: route.ts
frontend/src/app/lessons/: page.tsx
frontend/src/components/: BrowserOverlay.tsx  BrowserbaseIframe.tsx  LessonPlan.tsx  VoiceWidget.tsx  WindowManager.tsx
frontend/src/components/livekit/: DeviceSelect.tsx  VoiceControlBar.tsx
frontend/src/components/ui/: Button.tsx
frontend/src/lib/: logger.ts
frontend/src/types/: index.ts  lesson.ts
